--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,61 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.contenedor{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.semaforo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #000;
+    width: 150px;
+    height: 400px;
+}
 
-*/
+.luz_roja{
+    opacity: .4;
+    background-color: red;
+    border-radius: 50px;
+    width: 100px;
+    height: 100px;
+}
+.luz_roja_encendida{
+    background-color: red;
+    box-shadow: 0px 0px 50px 8px #f0e51a;
+    border-radius: 50px;
+    width: 100px;
+    height: 100px;
+}
+.luz_amarilla{
+    opacity: .4;
+    background-color: yellow;
+    border-radius: 50px;
+    width: 100px;
+    height: 100px;
+}
+.luz_amarilla_encendida{
+    background-color: yellow;
+    box-shadow: 0px 0px 50px 8px #f0e51a;
+    border-radius: 50px;
+    width: 100px;
+    height: 100px;
+}
+.luz_verde{
+    opacity: .4;
+    background-color:green;
+    border-radius: 50px;
+    width: 100px;
+    height: 100px;
+}
+
+.luz_verde_encendida{
+    background-color: green;
+    box-shadow: 0px 0px 50px 8px #f0e51a;
+    border-radius: 50px;
+    width: 100px;
+    height: 100px;
+}
