--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,10 +3,14 @@
 
 .contenedor{
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    margin-top: 40px;
     width: 100%;
 }
 .semaforo{
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,6 +18,17 @@
     background-color: #000;
     width: 150px;
     height: 400px;
+}
+.base{
+    background-color: #000;
+    width: 10px;
+    height: 100px;
+}
+.base_plana{
+    border-radius: 5px 5px 0px 0px;
+    background-color: #000;
+    width: 150px;
+    height: 15px;
 }
 
 .luz_roja{
